# dotfiles

./: .bashrc  .gitconfig  .gitignore  README.md  install.sh
fastfetch/: config.jsonc  logo.txt
foot/: foot.ini
hypr/: bindings.conf  hyprland.conf  hyprpaper.conf  input.conf  look.conf  monitors.conf  nightlight.frag  start.conf  variables.conf  windowrules.conf
kitty/: kitty.conf
skadi/: config.jsonc
skadi/backend/: Cargo.toml
skadi/backend/src/: err.rs  hyprland.rs  main.rs  payload.rs  spotify.rs  sysinfo.rs  volume.rs
skadi/plugins/: .prettierrc  package.json  payloads.ts  topbar.tsx  types.d.ts  util.ts
skadi/plugins/components/: clock.tsx  player.tsx  progress.css  progress.tsx  section.tsx  slider.tsx  sysinfo.tsx  volume.tsx  workspaces.tsx
skadi/scripts/: backend  vol.sh
waybar/: start.sh  style.css
