[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.42", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
sysinfo = "0.36.1"
thiserror = "2.0.12"
tokio = { version = "1.47.1", features = ["full"] }
